--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>3.4.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
