--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-spring.application.name=Learning_Managment_System
-spring.application.description=Learning Management System
-spring.application.version=1.0
-spring.datasource.url=jdbc:mysql://localhost:3306/lms
-spring.datasource.username=root
-spring.datasource.password=A__hegazyy
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-server.port=8081
-# DEBUG = true
+# Application properties
+spring.application.name=LMS-Application
+server.port=8080
+DEBUG = true
+spring.security.user.name=admin
+spring.security.user.password=admin123
